--- a/css/home.css
+++ b/css/home.css
@@ -149,6 +149,11 @@ body{
     content:"";
     display:block;
 }
+.aboutme-container div.vector-image::after{
+    clear:both;
+    content:"";
+    display: block;
+}
 .aboutme-container p a.btn-prtfo{
     display:inline-block;
 }
@@ -166,7 +171,7 @@ body{
     width:22%;
     float:left;
     margin:1.5%;
-    margin-top:50px;
+    /* margin-top:100px; */
     
 }
 .aboutme-container div.another::after {
@@ -236,6 +241,8 @@ body{
     text-shadow:1px 1px 5px aquamarine;
     background-color: darkmagenta; 
     border-radius:15% 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 .contact-container div{
     float:left;
@@ -258,6 +265,8 @@ body{
     background-color: violet; 
     border-radius:15% 0;
     z-index:1;
+    overflow-wrap: break-word;
+    
 }
 .contact-container div.content ul{
     list-style:none;
@@ -275,7 +284,7 @@ body{
     padding-top:20px;
 }
 .contact-container div.content div.call-btn{
-    background-color:azure;
+    background-color:orange;
     border:1px solid black;
     display:inline-block;
     width:150px;
@@ -287,12 +296,14 @@ body{
 .contact-container div.content div.call-btn a{
     background-color: green; 
     border-radius:70% 0;
+    border:2px solid black ;
 }
 section.contact-container div.email{
-    background-color: violet; 
+    
     border-radius:70% 0;
-    width:5em;
-    height:5em; 
+    border:2px solid black ;
+    width:3em;
+    height:3em; 
     position:absolute;
     top:0;
 }
@@ -414,25 +425,37 @@ section.contact-container div.email{
         margin-top:0;
     }
 /*section-3*/
+.contact-container{
+    width:auto;
+}
     .contact-container div {
-        float:none;
+        float:left;
         margin-top:4vh;
-        width:100%;
+        /* width:auto; */
     }
     .contact-container img{
         width:90%;
     }
     .contact-container div.content{
-        font-size:25px;
+        font-size:22px;
         text-align:center;
+        /* overflow-wrap: break-word; */
     }
     .contact-container div.content ul{
         text-align:left;
+        
     }
+    
     .contact-container div.content h3{
         font-size:30px;
     }
     .contact-container a{
         margin:3vh 0;
     }
+}
+.contact-container div.content div.call-btn{
+    margin: 3vw auto;
+    width: 25vw;
+    border-radius: 10%;
+    box-shadow: 1px 1px black;
 }
